// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBubble snapshots renders deleted message placeholder 1`] = `
<View
  accessibilityLabel="Message supprimé"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "flex-end",
      "flexDirection": "row",
      "marginBottom": 8.5,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#E5E7EB",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 8.5,
          "width": 40,
        },
        {
          "backgroundColor": "#E5E7EB",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#4B5563",
            "fontFamily": "Montserrat_700Bold",
            "fontSize": 15.5,
          },
          {
            "color": "#4B5563",
          },
        ]
      }
    >
      AD
    </Text>
  </View>
  <View
    style={
      {
        "maxWidth": "75%",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 12,
            "padding": 12.5,
          },
          {
            "backgroundColor": "#F3F4F6",
            "opacity": 0.8,
          },
          {
            "backgroundColor": "#F3F4F6",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <Text
          color="#9CA3AF"
          name="trash-outline"
          size={14}
        >
          trash-outline
        </Text>
        <Text
          style={
            [
              {
                "color": "#9CA3AF",
                "fontSize": 15.5,
                "fontStyle": "italic",
              },
              {
                "color": "#9CA3AF",
              },
            ]
          }
        >
          Ce message a été supprimé
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 4,
          },
          false,
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#9CA3AF",
              "fontSize": 13,
            },
            {
              "color": "#9CA3AF",
            },
          ]
        }
      >
        14:30
      </Text>
    </View>
  </View>
</View>
`;

exports[`MessageBubble snapshots renders edited message with edited label 1`] = `
<View
  collapsable={false}
  style={{}}
>
  <View
    accessibilityActions={
      [
        {
          "label": "Répondre",
          "name": "reply",
        },
        {
          "label": "Réagir",
          "name": "react",
        },
        {
          "label": "Plus",
          "name": "more",
        },
      ]
    }
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onAccessibilityAction={[Function]}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "marginBottom": 8.5,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#E5E7EB",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "marginRight": 8.5,
            "width": 40,
          },
          {
            "backgroundColor": "#E5E7EB",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#4B5563",
              "fontFamily": "Montserrat_700Bold",
              "fontSize": 15.5,
            },
            {
              "color": "#4B5563",
            },
          ]
        }
      >
        AD
      </Text>
    </View>
    <View
      style={
        {
          "maxWidth": "75%",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 12,
              "padding": 12.5,
            },
            [
              {
                "backgroundColor": "#FFFFFF",
                "borderBottomLeftRadius": 4,
              },
              {
                "backgroundColor": "#F3F4F6",
              },
            ],
            false,
            undefined,
          ]
        }
      >
        <Text
          accessibilityLabel="Alice Doe: Bonjour ! Comment ca va ?"
          accessibilityRole="text"
          style={
            [
              {
                "color": "#111827",
                "fontSize": 20,
                "lineHeight": 24,
              },
              {
                "color": "#111827",
              },
            ]
          }
        >
          Bonjour ! Comment ca va ?
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "flex-end",
                "marginTop": 4,
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#9CA3AF",
                  "fontSize": 10,
                  "fontStyle": "italic",
                  "marginRight": 4,
                },
                {
                  "color": "#9CA3AF",
                },
              ]
            }
          >
            modifié
          </Text>
          <Text
            style={
              [
                {
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 11,
                },
                {
                  "color": undefined,
                },
              ]
            }
          >
            14:30
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageBubble snapshots renders grouped message (avatar masque) 1`] = `
<View
  collapsable={false}
  style={{}}
>
  <View
    accessibilityActions={
      [
        {
          "label": "Répondre",
          "name": "reply",
        },
        {
          "label": "Réagir",
          "name": "react",
        },
        {
          "label": "Plus",
          "name": "more",
        },
      ]
    }
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onAccessibilityAction={[Function]}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "marginBottom": 2,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "marginRight": 8.5,
          "width": 40,
        }
      }
    />
    <View
      style={
        {
          "maxWidth": "75%",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 12,
              "padding": 12.5,
            },
            [
              {
                "backgroundColor": "#FFFFFF",
                "borderBottomLeftRadius": 4,
              },
              {
                "backgroundColor": "#F3F4F6",
              },
            ],
            false,
            undefined,
          ]
        }
      >
        <Text
          accessibilityLabel="Alice Doe: Bonjour ! Comment ca va ?"
          accessibilityRole="text"
          style={
            [
              {
                "color": "#111827",
                "fontSize": 20,
                "lineHeight": 24,
              },
              {
                "color": "#111827",
              },
            ]
          }
        >
          Bonjour ! Comment ca va ?
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "flex-end",
                "marginTop": 4,
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 11,
                },
                {
                  "color": undefined,
                },
              ]
            }
          >
            14:30
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageBubble snapshots renders message with image attachment 1`] = `
<View
  collapsable={false}
  style={{}}
>
  <View
    accessibilityActions={
      [
        {
          "label": "Répondre",
          "name": "reply",
        },
        {
          "label": "Réagir",
          "name": "react",
        },
        {
          "label": "Plus",
          "name": "more",
        },
      ]
    }
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onAccessibilityAction={[Function]}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "marginBottom": 8.5,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#E5E7EB",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "marginRight": 8.5,
            "width": 40,
          },
          {
            "backgroundColor": "#E5E7EB",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#4B5563",
              "fontFamily": "Montserrat_700Bold",
              "fontSize": 15.5,
            },
            {
              "color": "#4B5563",
            },
          ]
        }
      >
        AD
      </Text>
    </View>
    <View
      style={
        {
          "maxWidth": "75%",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 12,
              "padding": 12.5,
            },
            [
              {
                "backgroundColor": "#FFFFFF",
                "borderBottomLeftRadius": 4,
              },
              {
                "backgroundColor": "#F3F4F6",
              },
            ],
            false,
            undefined,
          ]
        }
      >
        <View
          accessibilityLabel="Pièce jointe"
          style={
            [
              {
                "gap": 4,
                "marginBottom": 4,
              },
              false,
            ]
          }
        >
          <View
            accessibilityHint="Touchez pour agrandir, restez appuyé pour plus d'options"
            accessibilityLabel="Image en pièce jointe"
            accessibilityRole="imagebutton"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderRadius": 12,
                "opacity": 1,
                "overflow": "hidden",
                "position": "relative",
              }
            }
          >
            <Image
              cachePolicy="memory-disk"
              contentFit="cover"
              placeholderContentFit="cover"
              source="https://test.local/media/img.jpg"
              style={
                [
                  {
                    "aspectRatio": 1.3333333333333333,
                    "borderRadius": 12,
                    "maxHeight": 260,
                    "minHeight": 180,
                    "width": "100%",
                  },
                  {
                    "backgroundColor": "#F3F4F6",
                  },
                ]
              }
              transition={200}
            />
          </View>
        </View>
        <Text
          accessibilityLabel="Alice Doe: Regarde ca"
          accessibilityRole="text"
          style={
            [
              {
                "color": "#111827",
                "fontSize": 20,
                "lineHeight": 24,
              },
              {
                "color": "#111827",
              },
            ]
          }
        >
          Regarde ca
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "flex-end",
                "marginTop": 4,
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 11,
                },
                {
                  "color": undefined,
                },
              ]
            }
          >
            14:30
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageBubble snapshots renders message with reactions 1`] = `
<View
  collapsable={false}
  style={{}}
>
  <View
    accessibilityActions={
      [
        {
          "label": "Répondre",
          "name": "reply",
        },
        {
          "label": "Réagir",
          "name": "react",
        },
        {
          "label": "Plus",
          "name": "more",
        },
      ]
    }
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onAccessibilityAction={[Function]}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "marginBottom": 8.5,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#E5E7EB",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "marginRight": 8.5,
            "width": 40,
          },
          {
            "backgroundColor": "#E5E7EB",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#4B5563",
              "fontFamily": "Montserrat_700Bold",
              "fontSize": 15.5,
            },
            {
              "color": "#4B5563",
            },
          ]
        }
      >
        AD
      </Text>
    </View>
    <View
      style={
        {
          "maxWidth": "75%",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 12,
              "padding": 12.5,
            },
            [
              {
                "backgroundColor": "#FFFFFF",
                "borderBottomLeftRadius": 4,
              },
              {
                "backgroundColor": "#F3F4F6",
              },
            ],
            false,
            undefined,
          ]
        }
      >
        <Text
          accessibilityLabel="Alice Doe: Bonjour ! Comment ca va ?"
          accessibilityRole="text"
          style={
            [
              {
                "color": "#111827",
                "fontSize": 20,
                "lineHeight": 24,
              },
              {
                "color": "#111827",
              },
            ]
          }
        >
          Bonjour ! Comment ca va ?
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "flex-end",
                "marginTop": 4,
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 11,
                },
                {
                  "color": undefined,
                },
              ]
            }
          >
            14:30
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 4,
              "marginLeft": 8,
              "marginTop": -8,
              "zIndex": 1,
            },
            false,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 2,
                "paddingHorizontal": 8,
                "paddingVertical": 3,
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(0,0,0,0.08)",
                "elevation": 2,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.12,
                "shadowRadius": 2,
              },
            ]
          }
        >
          <Text
            style={
              {
                "fontSize": 14,
              }
            }
          >
            ❤️
          </Text>
          <Text
            style={
              [
                {
                  "color": "#4B5563",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 11,
                  "marginLeft": 2,
                },
                {
                  "color": undefined,
                },
              ]
            }
          >
            2
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 2,
                "paddingHorizontal": 8,
                "paddingVertical": 3,
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(0,0,0,0.08)",
                "elevation": 2,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.12,
                "shadowRadius": 2,
              },
            ]
          }
        >
          <Text
            style={
              {
                "fontSize": 14,
              }
            }
          >
            😂
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageBubble snapshots renders message with reply preview 1`] = `
<View
  collapsable={false}
  style={{}}
>
  <View
    accessibilityActions={
      [
        {
          "label": "Répondre",
          "name": "reply",
        },
        {
          "label": "Réagir",
          "name": "react",
        },
        {
          "label": "Plus",
          "name": "more",
        },
      ]
    }
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onAccessibilityAction={[Function]}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "marginBottom": 8.5,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#E5E7EB",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "marginRight": 8.5,
            "width": 40,
          },
          {
            "backgroundColor": "#E5E7EB",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#4B5563",
              "fontFamily": "Montserrat_700Bold",
              "fontSize": 15.5,
            },
            {
              "color": "#4B5563",
            },
          ]
        }
      >
        AD
      </Text>
    </View>
    <View
      style={
        {
          "maxWidth": "75%",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 12,
              "padding": 12.5,
            },
            [
              {
                "backgroundColor": "#FFFFFF",
                "borderBottomLeftRadius": 4,
              },
              {
                "backgroundColor": "#F3F4F6",
              },
            ],
            false,
            {
              "minWidth": 220,
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(0,0,0,0.05)",
              "borderLeftColor": "#4F46E5",
              "borderLeftWidth": 3,
              "borderRadius": 6,
              "flexDirection": "row",
              "gap": 8,
              "marginBottom": 6,
              "opacity": 1,
              "paddingHorizontal": 8,
              "paddingVertical": 6,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "minWidth": 0,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontFamily": "Montserrat_600SemiBold",
                    "fontSize": 12,
                    "marginBottom": 2,
                  },
                  {
                    "color": "#4F46E5",
                  },
                ]
              }
            >
              Bob
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  [
                    {
                      "flex": 1,
                      "fontSize": 12,
                    },
                    {
                      "color": "#4B5563",
                    },
                  ]
                }
              >
                Message original cite
              </Text>
            </View>
          </View>
        </View>
        <Text
          accessibilityLabel="Alice Doe: Reponse au message"
          accessibilityRole="text"
          style={
            [
              {
                "color": "#111827",
                "fontSize": 20,
                "lineHeight": 24,
              },
              {
                "color": "#111827",
              },
            ]
          }
        >
          Reponse au message
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "flex-end",
                "marginTop": 4,
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 11,
                },
                {
                  "color": undefined,
                },
              ]
            }
          >
            14:30
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageBubble snapshots renders other user message (peer) 1`] = `
<View
  collapsable={false}
  style={{}}
>
  <View
    accessibilityActions={
      [
        {
          "label": "Répondre",
          "name": "reply",
        },
        {
          "label": "Réagir",
          "name": "react",
        },
        {
          "label": "Plus",
          "name": "more",
        },
      ]
    }
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onAccessibilityAction={[Function]}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "marginBottom": 8.5,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#E5E7EB",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "marginRight": 8.5,
            "width": 40,
          },
          {
            "backgroundColor": "#E5E7EB",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#4B5563",
              "fontFamily": "Montserrat_700Bold",
              "fontSize": 15.5,
            },
            {
              "color": "#4B5563",
            },
          ]
        }
      >
        AD
      </Text>
    </View>
    <View
      style={
        {
          "maxWidth": "75%",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 12,
              "padding": 12.5,
            },
            [
              {
                "backgroundColor": "#FFFFFF",
                "borderBottomLeftRadius": 4,
              },
              {
                "backgroundColor": "#F3F4F6",
              },
            ],
            false,
            undefined,
          ]
        }
      >
        <Text
          accessibilityLabel="Alice Doe: Bonjour ! Comment ca va ?"
          accessibilityRole="text"
          style={
            [
              {
                "color": "#111827",
                "fontSize": 20,
                "lineHeight": 24,
              },
              {
                "color": "#111827",
              },
            ]
          }
        >
          Bonjour ! Comment ca va ?
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "flex-end",
                "marginTop": 4,
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 11,
                },
                {
                  "color": undefined,
                },
              ]
            }
          >
            14:30
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageBubble snapshots renders own message (mine) 1`] = `
<View
  collapsable={false}
  style={{}}
>
  <View
    accessibilityActions={
      [
        {
          "label": "Répondre",
          "name": "reply",
        },
        {
          "label": "Réagir",
          "name": "react",
        },
        {
          "label": "Plus",
          "name": "more",
        },
      ]
    }
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onAccessibilityAction={[Function]}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row-reverse",
        "marginBottom": 8.5,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "maxWidth": "75%",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 12,
              "padding": 12.5,
            },
            [
              {
                "backgroundColor": "#4F46E5",
                "borderBottomRightRadius": 4,
              },
              {
                "backgroundColor": "#4F46E5",
              },
            ],
            false,
            undefined,
          ]
        }
      >
        <Text
          accessibilityLabel="Alice Doe: Bonjour ! Comment ca va ?"
          accessibilityRole="text"
          style={
            [
              {
                "color": "#111827",
                "fontSize": 20,
                "lineHeight": 24,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          Bonjour ! Comment ca va ?
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "flex-end",
                "marginTop": 4,
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 11,
                },
                {
                  "color": "rgba(255,255,255,0.85)",
                },
              ]
            }
          >
            14:30
          </Text>
          <View
            style={
              {
                "marginLeft": 4,
              }
            }
          >
            <Text
              data-status="read"
            >
              read
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
